# wptolu

./: .env.example  .gitignore  Instrucciones.md  README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
core/: admin.py  context_processors.py  models.py  views.py
core/migrations/: 0001_initial.py  0002_configuracionsitio_hero_intervalo_segundos_heroslide.py
servicios/: admin.py  models.py  sitemaps.py  urls.py  views.py
servicios/management/commands/: seed.py
servicios/migrations/: 0001_initial.py  0002_alter_servicio_precio_alter_servicio_unidad_precio.py  0003_alter_servicio_precio.py
servicios/templatetags/: servicios_extras.py
static/css/: input.css  tolu.css
templates/: base.html  home.html
templates/core/: nosotros.html
templates/partials/: footer.html  nav.html  redes.html  tarjeta.html
templates/servicios/: _grilla.html  detalle.html  lista.html
